# AELocate

./: .gitignore  README.md  srcLocate.sln
AELocate/: AELocate  CMakeLists.txt  bottom.cc  bottom.h  geiger.cc  geiger.h  main.cc  plane.cc  plane.h  sphere.cc  sphere.h
srcLocate/: Bottom.cpp  Bottom.h  Geiger.cpp  Geiger.h  Plane.cpp  Plane.h  README.md  Sphere.cpp  Sphere.h  main.cpp  srcLocate.vcxproj  srcLocate.vcxproj.filters  使用说明.html  球面定位说明.html
srcLocate/Doc/: 平面(罐底)定位说明.html
